tests/miniJava/neg/005846_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { Main ( 0 ) { } else { } } }
